# cbs-jevek

./: .env  .gitattributes  Cargo.toml  Makefile  app.config.toml  dev.coker-compose.yaml  dev.docker-compose.yaml  prod.docker-compose.yaml
entity/: Cargo.toml
entity/src/: account_balances.rs  account_categories.rs  account_limits.rs  account_links.rs  account_types.rs  accounts.rs  accruals_and_provisions.rs  admin_audit_logs.rs  agent_audits.rs  agent_commission_rules.rs  agent_commissions.rs  agent_kyc_docs.rs  agent_performance.rs  agent_settlements.rs  agent_transactions.rs  agent_wallets.rs  agents.rs  aml_alerts.rs  aml_rules.rs  audit_trails.rs  branches.rs  card_disputes.rs  card_limits.rs  card_transactions.rs  cards.rs  cash_transfers.rs  chargebacks.rs  chart_of_accounts.rs  commission_payouts.rs  contact_details.rs  contribution_cycles.rs  contributions.rs  countries.rs  credit_bureau_reports.rs  currencies.rs  currency_transaction_reports.rs  customer_address_verifications.rs  customer_app_preferences.rs  customer_blacklist_records.rs  customer_education_content.rs  (+83 more)
migration/: Cargo.toml
migration/src/: lib.rs  m20251204_103935_create_countries.rs  m20251204_112805_create_institutions.rs  m20251204_150208_create_branches.rs  m20251204_151411_create_chart_of_accounts.rs  m20251204_152312_create_customers.rs  m20251204_155243_create_customer_identifications.rs  m20251204_160520_create_customer_address_verifications.rs  m20251204_161342_create_customer_blacklist_records.rs  m20251205_150707_create_account_categories.rs  m20251205_151223_create_account_types.rs  m20251205_154503_create_accounts.rs  m20251205_160629_create_account_balances.rs  m20251205_162130_create_account_links.rs  m20251205_163328_create_account_limits.rs  m20251205_164546_create_fixed_deposit_accounts.rs  m20251205_165925_create_transaction_channels.rs  (+97 more)
src/: lib.rs  main.rs
tests/: common.rs  health_test.rs
(+42 files in other folders)
