[package]
name = "cbs-jevek"
version = "0.1.0"
edition = "2024"
authors = ["Emmanuel Aniagyei"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cbs-jevek"
path = "src/main.rs"


[workspace]
members = [".", "migration"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
incremental = false
overflow-checks = false

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
migration = { path = "migration" }
actix-cors = "0.7.1"
actix-http = "3.11.2"
actix-rt = "2.11.0"
actix-web = "4.12.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
config = "0.15.19"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = "0.11.19"
log = "0.4.28"
md5 = "0.8.0"
once_cell = "1.21.3"
openssl = { version = "0.10.75", features = ["vendored"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = { version = "0.14", features = ["postgres"] }
